# fine-element-method-solver

./: CMakeLists.txt  Readme.md  graph.py  main.cpp  result.txt
functions/: BL.cpp  GaussElimination.cpp  Gaussian_Quadrature.cpp  e.cpp  xi.cpp
headers/: BL.h  GaussElimination.h  Gaussian_Quadrature.h  e.h  gnuplot-iostream.h  xi.h
